--- a/publications/multiviewps/content_index.html
+++ b/publications/multiviewps/content_index.html
@@ -1,10 +1,21 @@
-<div class="col-lg-8 col-lg-offset-2">
-	<div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JG2Zq1Ot-oY" frameborder="0" allowfullscreen></iframe>
-  </div>
+<div class="container mt-4">
+	<div class="row">
+		<div class="col-12 mb-4 text-center">
+			<div class="ratio ratio-16x9">
+				<iframe src="https://www.youtube.com/embed/JG2Zq1Ot-oY" title="YouTube video" allowfullscreen></iframe>
+			</div>
+		</div>
+		<div class="col-12">
+			<h2>Abstract</h2>
+			<p> We propose a robust uncalibrated multiview photometric stereo method for high quality 3D shape reconstruction. 
+				In our method, a coarse initial 3D mesh obtained using a multiview stereo method is projected onto a 2D planar domain 
+				using a planar mesh parameterization technique. We describe methods for surface normal estimation 
+				that work in the parameterized 2D space that jointly incorporates all geometric and photometric cues from multiple viewpoints.
+				Using an estimated surface normal map, a refined 3D mesh is then recovered by computing an optimal displacement map in the same 2D planar domain. 
+				Our method avoids the need of merging view-dependent surface normal maps that is often required in conventional methods. 
+				We conduct evaluation on various real-world objects containing surfaces with specular reflections, multiple albedos, and complex topologies 
+				in both controlled and uncontrolled settings and demonstrate that accurate 3D meshes with fine geometric details can be recovered by our method.</p>
+		</div>
+	</div>
 </div>
 
-<div class="col-lg-8 col-lg-offset-2">
-	<h2>Abstract</h2>
-	<p> We propose a robust uncalibrated multiview photometric stereo method for high quality 3D shape reconstruction. In our method, a coarse initial 3D mesh obtained using a multiview stereo method is projected onto a 2D planar domain using a planar mesh parameterization technique. We describe methods for surface normal estimation that work in the parameterized 2D space that jointly incorporates all geometric and photometric cues from multiple viewpoints. Using an estimated surface normal map, a refined 3D mesh is then recovered by computing an optimal displacement map in the same 2D planar domain. Our method avoids the need of merging view-dependent surface normal maps that is often required in conventional methods. We conduct evaluation on various real-world objects containing surfaces with specular reflections, multiple albedos, and complex topologies in both controlled and uncontrolled settings and demonstrate that accurate 3D meshes with fine geometric details can be recovered by our method.</p>
-</div>
